syntax = "proto3";

package jedis;

option java_package = "com.github.phantomthief.jedis.proto";
option java_multiple_files = true;

enum OpType {
    UNKNOWN = 0;
    STRING_SET = 1;
}

message Op {
    uint64 request_time = 1;
    uint64 response_time = 2;
    OpType type = 3;
    bytes payload = 4;
}

message PipelineOp {
    repeated Op op = 1;
    uint64 reponse_time = 2;
}

// STRING_SET = 1;
message StringSetOp {
    string key = 1;
    string value = 2;
}

// TODO: add more